--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">发布问答</a></li>
+        <li class="active"><a href="{{ url_for('index') }}">首页 <span class="sr-only">(current)</span></a></li>
+        <li><a href="{{ url_for('question') }}">发布问答</a></li>
         <!-- li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -41,9 +41,9 @@
           </ul>
         </li -->
       </ul>
-      <form class="navbar-form navbar-left">
+      <form class="navbar-form navbar-left" action="{{ url_for('search') }}" method="get">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="来呀">
+          <input name="q" type="text" class="form-control" placeholder="请输入关键字">
         </div>
         <button type="submit" class="btn btn-default">查询</button>
       </form>
